--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
       </section>
       <p id="espaco">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <a href="https://www.android.com/intl/pt-BR_br/what-is-android/" target="_blank" class="cor"><strong>Android</strong></a> e seu simpático mascote.</p>
    </main>
+   <div class="centralizacao">
+      <button onclick="topo()">TOPO</button>
+   </div>
     <footer>
       <p>Site criado <strong>Ariel Marinho</strong> com parceria com o <strong>&copy;Curso em Video</strong></p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
