--- a/Trabalho_pw1/28.08.2024/galeria.html
+++ b/Trabalho_pw1/28.08.2024/galeria.html
@@ -86,9 +86,11 @@
             cursor: pointer;
             font-family: 'Bebas Neue', Helvetica, sans-serif;  
             width: 150px;
+            transition: 1s;
         }
         .corfundo button:hover{
             background-color: rgba(0, 0, 255, 0.829);
+            transform: scale(1.1);
         }
         .corfundo button:active{
             background-color: red;
@@ -112,9 +114,11 @@
             cursor: pointer;
             font-family: 'Bebas Neue', Helvetica, sans-serif;  
             width: 150px;
+            transition: 1s;
         }
         .corfundo1 button:hover{
             background-color: rgba(0, 0, 255, 0.829);
+            transform: scale(1.1);
         }
         .corfundo1 button:active{
             background-color: red;
@@ -138,9 +142,11 @@
             cursor: pointer;
             font-family: 'Bebas Neue', Helvetica, sans-serif;  
             width: 150px;
+            transition: 1s;
         }
         .corfundo2 button:hover{
             background-color: rgba(0, 0, 255, 0.829);
+            transform: scale(1.1);
         }
         .corfundo2 button:active{
             background-color: red;
@@ -164,9 +170,11 @@
             cursor: pointer;
             font-family: 'Bebas Neue', Helvetica, sans-serif;  
             width: 150px;
+            transition: 1s;
         }
         .corfundo3 button:hover{
             background-color: rgba(0, 0, 255, 0.829);
+            transform: scale(1.1);
         }
         .corfundo3 button:active{
             background-color: red;
@@ -190,12 +198,17 @@
             cursor: pointer;
             font-family: 'Bebas Neue', Helvetica, sans-serif;  
             width: 150px;
+            transition: 1s;
         }
         .corfundo4 button:hover{
             background-color: rgba(0, 0, 255, 0.829);
+            transform: scale(1.1);
         }
         .corfundo4 button:active{
             background-color: red;
+        }
+        img{
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -209,12 +222,12 @@
                 <li><a href="cadastro.html">CADASTRO</a></li>
             </ul>
         </nav>
-        <form>
+        <!-- <form>
             <div class="search-container">
                 <input type="text" name="text" id="text" required>
-                <button onclick="sear">Buscar</button>
+                <button onclick="getCarId()">Buscar</button>
             </div>
-        </form>
+        </form> -->
     </header>
     <main>
         <div class="corfundo">
