--- a/Trabalho_pw1/28.08.2024/home.html
+++ b/Trabalho_pw1/28.08.2024/home.html
@@ -5,66 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja de Carros</title>
     <link rel="shortcut icon" href="2555013.ico" type="image/x-icon">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-        body, html{
-            margin: 0;
-            padding: 0;
-            font-family: 'Bebas Neue', Helvetica, sans-serif;             
-        }
-        header{
-            background-color: #444;
-        }
-        nav,a{
-            color: #ffffff;
-            background-color: #444;
-        }
-        a:hover{
-            background-color: #1a1212;
-            border-radius: 10px;
-            text-decoration: underline;
-        }
-        ul{
-            display: flex;
-            gap: 50px;
-            list-style: none;
-        }
-        h1{
-            text-align: center;
-            color: #ffffff;
-            margin: 0;
-        }
-        li, a {
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            padding: 10px;
-        }
-        p{
-           margin: 20px;
-        }
-        h2{
-            margin: 20px;
-        }
-        button{
-            margin: 20px;
-            height: 5vh;
-            background-color: blue;
-            color: #ffffff;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 5px 5px 5px 5px rgba(66, 64, 64, 0.801);
-            cursor: pointer;
-            font-family: 'Bebas Neue', Helvetica, sans-serif;  
-            width: 150px;
-        }
-        button:hover{
-            background-color: rgba(0, 0, 255, 0.829);
-        }
-        button:active{
-            background-color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
